--- a/wiki/WhatisCIF.wiki
+++ b/wiki/WhatisCIF.wiki
@@ -71,6 +71,7 @@ Example: [Feeds_v0 Feeds]
 == Recent Presentations ==
 All public presentation content licensed under [http://creativecommons.org/licenses/by-sa/3.0 CCv3]
 
+ * 2013 -- [http://code.google.com/p/collective-intelligence-framework/downloads/detail?name=2013_MAAWG_wesyoung.pdf&can=2&q=#makechanges maawg]
  * 2012 -- [http://code.google.com/p/collective-intelligence-framework/downloads/detail?name=2012_SANS.pdf GFIRST/NIST] the next ten years
  * 2012 -- [http://code.google.com/p/collective-intelligence-framework/downloads/detail?name=2012_FIRST.pdf FIRST.org] Sharing data's hard [http://media.first.org/podcasts/FIRST2012-WesYoung.mp3 here's] how we did it (mp3)
  * 2012 -- [http://code.google.com/p/collective-intelligence-framework/downloads/detail?name=i2smm2012_ses.pdf Internet2 Combined Industry and Research Constituency Meeting]
