--- a/wiki/ClientInstall_v1.wiki
+++ b/wiki/ClientInstall_v1.wiki
@@ -14,7 +14,7 @@ A list of known [KnownIssues_v1 issues] for v1
 == Backwards Compatibility ==
  * as of v1, the 'CIF-Client' is now part of the client side library 'libcif'
  * the deprecated "CIF::Client" (via CPAN) cannot be used with a v1 instance
- * the v0 client *MUST* be [RemoveClient_v0 removed] first
+ * the v0 client *MUST* be [ClientRemoval_v0 removed] first
 
 == Caveats ==
  * libcif cannot be installed via CPAN at this time
