Edited wiki page SideBar through web user interface.

--- a/wiki/SideBar.wiki
+++ b/wiki/SideBar.wiki
@@ -88,4 +88,23 @@
    * [API_CIFProtocol_v1 CIF Protocol]
    * [API_ProtocolBuffers_v1 Protocol Buffer API]
    * [API_HTTP_v1 HTTP API]
- * (devel) v3
+ * (devel) [WhatisCIF v3]
+  * [ServerInstall_v3 Server]
+   * [Utilities_v3 Utilities]
+   * [MigrateApikeys_v3 API key migration]
+   * [CIFInfrastructureDiagram Distributed Environment]
+    * [SmrtInstall_v3 Smrt Standalone]
+    * [RouterInstall_v3 Router Standalone]
+    * [DbiInstall_v3 Database Interface]
+    * [PostgresqlStandalone_v3 PostgreSQL Standalone]
+   * [GroupSupport_v3 Group Support]
+   * [RTCIFMinimal_v3 RT Plugin]
+   * [ServerBackup_v3 Backup]
+  * [ClientInstall_v3 Client]
+  * Cookbook
+   * [AddingFeeds_v3 Adding New Feeds]
+  * [FAQ_v3 FAQ]
+  * [API_v3 API]
+   * [API_CIFProtocol_v3 CIF Protocol]
+   * [API_ProtocolBuffers_v3 Protocol Buffer API]
+   * [API_HTTP_v3 HTTP API]
