Edited wiki page NewFeedSources through web user interface.

--- a/wiki/NewFeedSources.wiki
+++ b/wiki/NewFeedSources.wiki
@@ -54,6 +54,37 @@ http://www.ciarmy.com/list/ci-badguys.txt
 http://www.malware.com.br/cgi/submit?action=list
 http://www.autoshun.org/files/shunlist.html
 }}}
+ 
+  # via http://www.cerveau.us/?p=31
+
+{{{
+abusechweb http://dnsbl.abuse.ch/webabusetracker.php
+arbor http://atlas-public.ec2.arbor.net/public/ssh_attackers
+autoshun http://www.autoshun.org/files/shunlist.csv
+badguys http://www.t-arend.de/linux/badguys.txt
+blacklisted http://www.infiltrated.net/blacklisted
+brawg http://www.brawg.com/hosts.deny
+cleanmxv http://support.clean-mx.de/clean-mx/xmlviruses?response=alive&format=csv&fields=url,ip,domain&domain=
+cleanmxp http://support.clean-mx.de/clean-mx/xmlphishing?response=alive&format=csv&fields=url,ip,domain&domain=
+danger http://danger.rulez.sk/projects/bruteforceblocker/blist.php
+denyhost http://stats.denyhosts.net/stats.html
+dshield http://www.dshield.org/ipsascii.html?limit=5000
+dynastop http://dynastop.tanaya.net/DynaStop.BleedingThreats.conf
+emergingthreats http://www.emergingthreats.net/rules/bleeding-compromised.rules
+evilssh http://vmx.yourcmc.ru/BAD_HOSTS.IP4
+geopsy http://www.geopsy.org/blacklist.html
+haleys http://charles.the-haleys.org/ssh_dico_attack_hdeny_format.php/hostsdeny.txt
+kidsclinic http://www.kids-clinic.jp/uni/ipaddress/new_log
+kolatzek http://robert.kolatzek.org/possible_botnet_ips.txt
+malekal http://www3.malekal.com/exploit.txt
+maldom http://mirror1.malwaredomains.com/files/domains.txt
+mdl http://www.malwaredomainlist.com/mdl.php?colsearch=All&quantity=All&search=
+prometheus http://downloads.prometheus-group.com/delayed/rules/modsec/domain-blacklist.txt
+skygeo http://sky.geocities.jp/ro_hp_add/ro_hp_add_hosts.txt
+sshbl http://www.sshbl.org/list.txt
+stopforumspam http://www.stopforumspam.com/downloads/bannedips.csv
+surriel rsync://psbl-mirror.surriel.com/psbl/psbl.txt
+}}}
 
 = References =
  * http://lists.emergingthreats.net/pipermail/emerging-sigs/2011-July/015036.html
