--- a/wiki/ServerInstall_CentOS6_v1.wiki
+++ b/wiki/ServerInstall_CentOS6_v1.wiki
@@ -32,7 +32,7 @@ The following dependency installation assumes the RHEL [http://fedoraproject.org
 ----
  # install base server dependencies (as root) first
 {{{
-$ yum -y install sudo bind-utils rng-tools postgresql-server httpd httpd-devel mod_ssl gcc make expat expat-devel uuid uuid uuid-devel wget bind rsync libuuid-devel mod_perl mod_perl-devel ntpdate
+$ yum -y install sudo bind-utils rng-tools postgresql-server httpd httpd-devel mod_ssl gcc make expat expat-devel uuid uuid-devel wget bind rsync libuuid-devel mod_perl mod_perl-devel ntpdate
 }}}
  # make sure your clock is up to date (some packages might not install if it's too far skewed)
 {{{
