--- a/wiki/ServerInstall_CentOS5_v1.wiki
+++ b/wiki/ServerInstall_CentOS5_v1.wiki
@@ -45,6 +45,7 @@ $ sudo rpm -iv pgdg-centos-8.4-3.noarch.rpm
 }}}		
 		
 == Dependency installation ==
+----
  1. install base server dependencies first
 {{{
 $ sudo yum -y install rng-utils bind-utils postgresql-server httpd httpd-devel mod_ssl gcc make expat expat-devel uuid uuid-devel wget bind rsync mod_perl mod_perl-devel ntp
@@ -80,35 +81,38 @@ To be removed after testing instructions:
   * perl-Date-Manip doesn't exist
   * perl-CPAN doesn't exist
 }}}
-1. configure CPAN for use (as root)
+== CPAN ==
+----
+=== Configure CPAN ===
+ 1. configure CPAN for use (as root)
+{{{
+$ perl -MCPAN -e 'shell'
+}}}
+ 1. choose all default options
+ 1. when it gets to the option to select a mirror, choost you continent, country, then an appropriate mirror
+ 1. when returned to the `cpan>` prompt, type `exit`
 
-	* start cpan
-	
-			$ perl -MCPAN -e 'shell'
-	
-	* choose all default options
-	* when it gets to the option to select a mirror, choost you continent, country, then an appropriate mirror
-	* when returned to the `cpan>` prompt, type `exit`
-		
-1. update CPAN (as root)
+=== Update CPAN ===
+11. update CPAN (as root)
+{{{
+$ PERL_MM_USE_DEFAULT=1 perl -MCPAN -e 'install Bundle::CPAN'
+}}}		
+ 1. If prompted during install, accept default values. Note that if this isn't done, DateTime refuses to install cleanly, which leads to other issues
+ 1. Install (as root) the remaining CPAN modules. Note: changing the order of the packages in the above line can result in packages not building/installing correctly.
+{{{
+$ PERL_MM_USE_DEFAULT=1 perl -MCPAN -e 'install Net::Abuse::Utils,Linux::Cpuinfo,Google::ProtocolBuffers,Iodef::Pb::Simple,Compress::Snappy,Net::Abuse::Utils::Spamhaus,Net::DNS::Match,Snort::Rule,Parse::Range,Log::Dispatch,ZeroMQ,Sys::MemInfo,JSON::XS,File::Type,LWP::UserAgent,Class::Trigger,Class::DBI,Net::Patricia,Text::Table,Mozilla::CA,Net::SSLeay,IO::Socket::SSL,IO::Socket::INET6,Text::CSV,XML::RSS,Date::Manip,Module::Pluggable,MIME::Lite,Time::HiRes,LWP::Protocol::https'
+}}}
+{{{
+To be removed after testing instructions:
 
-		$ PERL_MM_USE_DEFAULT=1 perl -MCPAN -e 'install Bundle::CPAN'
-		
-	* If prompted during install, accept default values
-	* Note that if this isn't done, DateTime refuses to install cleanly, which leads to other issues
+ * Note: The following packages have been added, compared to the CentOS 6 installation:
+  * DateTime
+  * Time::HiRes
+  * MIME::Lite
+}}}
 
-1. Install (as root) the remaining CPAN modules
-
-		$ PERL_MM_USE_DEFAULT=1 perl -MCPAN -e 'install Net::Abuse::Utils,Linux::Cpuinfo,Google::ProtocolBuffers,Iodef::Pb::Simple,Compress::Snappy,Net::Abuse::Utils::Spamhaus,Net::DNS::Match,Snort::Rule,Parse::Range,Log::Dispatch,ZeroMQ,Sys::MemInfo,JSON::XS,File::Type,LWP::UserAgent,Class::Trigger,Class::DBI,Net::Patricia,Text::Table,Mozilla::CA,Net::SSLeay,IO::Socket::SSL,IO::Socket::INET6,Text::CSV,XML::RSS,Date::Manip,Module::Pluggable,MIME::Lite,Time::HiRes,LWP::Protocol::https'
-
-	* Note: changing the order of the packages in the above line can result in packages not building/installing correctly.
-	* Note: The following packages have been added, compared to the CentOS 6 installation:
-		* DateTime
-		* Time::HiRes
-		* MIME::Lite
-
-## System Setup
-
+== System Setup ==
+----
 ### Resolve Config
 
 1. modify /etc/sysconfig/network-scripts/ifcfg-eth0 with the following DNS1="127.0.0.1" line
