--- a/wiki/ServerInstall_CentOS5_v1.wiki
+++ b/wiki/ServerInstall_CentOS5_v1.wiki
@@ -140,252 +140,264 @@ search localdomain
 nameserver 127.0.0.1
 }}}
 			
-### PostgreSQL
+=== PostgreSQL ===
 
-1. init the main cluster
+ 1. init the main cluster
+{{{
+$ sudo /sbin/service postgresql initdb
+}}}		
+ 1. The default installation of PostgreSQL differs with respect to the rest of the documentation. Some symlinking aligns it:
+{{{
+$ sudo mkdir -p /etc/postgresql/8.4/main
+$ sudo chown -R postgres:postgres /etc/postgresql
+$ sudo chmod 760 -R /etc/postgresql
+$ sudo ln -sf /var/lib/pgsql/data/postgresql.conf /etc/postgresql/8.4/main/postgresql.conf
+$ sudo ln -sf /var/lib/pgsql/data/pg_hba.conf /etc/postgresql/8.4/main/pg_hba.conf
+}}}
+ 1. start up the cluster
+{{{
+$ sudo service postgresql start
+}}}
 
-		$ sudo /sbin/service postgresql initdb
-		
-1. The default installation of PostgreSQL differs with respect to the rest of the documentation. Some symlinking aligns it:
+== Default CIF user ==
+ 
+ 1. create the default "cif" user/group
+{{{
+$ sudo /usr/sbin/useradd cif
+}}}		
+ 1. change the default home permissions
+{{{
+$ sudo chmod 770 /home/cif
+}}}		
 
-		$ sudo mkdir -p /etc/postgresql/8.4/main
-		$ sudo chown -R postgres:postgres /etc/postgresql
-		$ sudo chmod 760 -R /etc/postgresql
-		$ sudo ln -sf /var/lib/pgsql/data/postgresql.conf /etc/postgresql/8.4/main/postgresql.conf
-		$ sudo ln -sf /var/lib/pgsql/data/pg_hba.conf /etc/postgresql/8.4/main/pg_hba.conf
+== CIF Router Configuration (Apache) ==
 
-## Default CIF user
-
-1. create the default "cif" user/group
-
-		$ sudo /usr/sbin/useradd cif
-		
-1. change the default home permissions
-
-		$ sudo chmod 770 /home/cif
-		
-## CIF Router Configuration (Apache)
 Some of the "CIF" values will be created later in the doc. For now just follow the config as is, don't worry about creating things in /opt/cif or /home/cif
 
-1. if you need help generating your own certificates, follow the directions [here](http://wiki.centos.org/HowTos/Https)
-
-1. unless you know what you're doing with virtual hosts, comment out the port-80 stuff in /etc/httpd/conf/httpd.conf (around line 130)
-
-		# Listen: Allows you to bind Apache to specific IP addresses and/or
-		# ports, in addition to the default. See also the <VirtualHost>
-		# directive.
-		#
-		# Change this to Listen on specific IP addresses as shown below to
-		# prevent Apache from glomming onto all bound IP addresses (0.0.0.0)
-		#
-		#Listen 12.34.56.78:80
-		+ #Listen 80
-
-1. configure httpd, add these lines to your /etc/httpd/conf.d/ssl.conf config (around line 80)
-
-		<VirtualHost _default_:443>
-		+      PerlRequire /opt/cif/bin/http_api.pl
-		+      Include /etc/httpd/conf.d/cif.conf
+ 1. if you need help generating your own certificates, follow the directions [here](http://wiki.centos.org/HowTos/Https)
+ 1. unless you know what you're doing with virtual hosts, comment out the port-80 stuff in /etc/httpd/conf/httpd.conf (around line 130)
+{{{
+# Listen: Allows you to bind Apache to specific IP addresses and/or
+# ports, in addition to the default. See also the <VirtualHost>
+# directive.
+#
+# Change this to Listen on specific IP addresses as shown below to
+# prevent Apache from glomming onto all bound IP addresses (0.0.0.0)
+#
+#Listen 12.34.56.78:80
++ #Listen 80
+}}}
+ 1. configure httpd, add these lines to your /etc/httpd/conf.d/ssl.conf config (around line 80)
+{{{
+<VirtualHost _default_:443>
++      PerlRequire /opt/cif/bin/http_api.pl
++      Include /etc/httpd/conf.d/cif.conf
+....
+}}}		
+ 1. create your config at /etc/httpd/conf.d/cif.conf, which should look like:
+{{{
+<Location /api>
+    SetHandler perl-script
+    PerlResponseHandler CIF::Router::HTTP
+    PerlSetVar CIFRouterConfig "/home/cif/.cif"
+</Location>
+}}}
+ 1. add your "apache" user to the group "cif" (this modifies /etc/group):
+{{{
+$ sudo /usr/sbin/usermod -a -G cif apache
+}}}
 		
-1. create your config at /etc/httpd/conf.d/cif.conf, which should look like:
+== Random Number Generator ==
+----
 
-		<Location /api>
-			SetHandler perl-script
-			PerlResponseHandler CIF::Router::HTTP
-			PerlSetVar CIFRouterConfig "/home/cif/.cif"
-		</Location>
-		
-1. add your "apache" user to the group "cif" (this modifies /etc/group):
-
-		$ sudo /usr/sbin/usermod -a -G cif apache
-		
-## Random Number Generator
 The "rngd' service [helps](https://www.centos.org/modules/newbb/viewtopic.php?topic_id=36209) with random number generation (mainly used for generating security certificates in bind and apache, speeds up the entropy process).
 
-1. By default, there is no rngd service script. This does exist in CentOS 6, so we'll take that one and use it.
+By default, there is no rngd service script. This does exist in CentOS 6, so we'll take that one and use it.
 
-	* create a new file /etc/init.d/rngd
-	
-			#!/bin/bash
-			#
-			# rngd        This starts and stops rngd
-			#
-			# chkconfig: - 13 99
-			# description: This starts the Random Number Generator Daemon, \
-			#              which collects entropy from hardware sources and \
-			#              write it to /dev/random
-			#
-			# processname: /sbin/rngd
-			# config: /etc/sysconfig/rngd
-			# pidfile: /var/run/rngd.pid
-			#
-			# Return values according to LSB for all commands but status:
-			# 0 - success
-			# 1 - generic or unspecified error
-			# 2 - invalid or excess argument(s)
-			# 3 - unimplemented feature (e.g. "reload")
-			# 4 - insufficient privilege
-			# 5 - program is not installed
-			# 6 - program is not configured
-			# 7 - program is not running
-			#
-
-
-			PATH=/sbin:/bin:/usr/bin:/usr/sbin
-			prog="rngd"
-
-			# Source function library.
-			. /etc/init.d/functions
-
-			# Allow anyone to run status
-			if [ "$1" = "status" ] ; then
-				status $prog
-				RETVAL=$?
-				exit $RETVAL
-			fi
-
-			# Check that we are root ... so non-root users stop here
-			test $EUID = 0  ||  exit 4
-
-			# Check config
-			test -f /etc/sysconfig/rngd && . /etc/sysconfig/rngd
-
-			RETVAL=0
-
-			start(){
-				test -x /sbin/rngd  || exit 5
-
-				echo -n $"Starting $prog: "
-
-				unset HOME MAIL USER USERNAME
-				daemon $prog "$EXTRAOPTIONS"
-				RETVAL=$?
-				echo
-				if test $RETVAL = 0 ; then
-					touch /var/lock/subsys/rngd
-				fi
-				return $RETVAL
-			}
-
-			stop(){
-				echo -n $"Stopping $prog: "
-				killproc $prog
-				RETVAL=$?
-				echo
-				rm -f /var/lock/subsys/rngd
-				return $RETVAL
-			}
-
-			reload(){
-				stop
-				start
-			}
-
-			restart(){
-				stop
-				start
-			}
-
-			condrestart(){
-				[ -e /var/lock/subsys/rngd ] && restart
-				return 0
-			}
+1, create a new file /etc/init.d/rngd
+{{{	
+#!/bin/bash
+#
+# rngd        This starts and stops rngd
+#
+# chkconfig: - 13 99
+# description: This starts the Random Number Generator Daemon, \
+#              which collects entropy from hardware sources and \
+#              write it to /dev/random
+#
+# processname: /sbin/rngd
+# config: /etc/sysconfig/rngd
+# pidfile: /var/run/rngd.pid
+#
+# Return values according to LSB for all commands but status:
+# 0 - success
+# 1 - generic or unspecified error
+# 2 - invalid or excess argument(s)
+# 3 - unimplemented feature (e.g. "reload")
+# 4 - insufficient privilege
+# 5 - program is not installed
+# 6 - program is not configured
+# 7 - program is not running
+#
 
 
-			# See how we were called.
-			case "$1" in
-				start)
-				start
-				;;
-				stop)
-				stop
-				;;
-				restart)
-				restart
-				;;
-				reload|force-reload)
-				reload
-				;;
-				condrestart|try-restart)
-				condrestart
-				;;
-				*)
-				echo $"Usage: $0 {start|stop|status|restart|condrestart|try-restart|reload|force-reload}"
-				RETVAL=3
-			esac
+PATH=/sbin:/bin:/usr/bin:/usr/sbin
+prog="rngd"
 
-			exit $RETVAL
+# Source function library.
+. /etc/init.d/functions
 
-	* make it executable
-	
-			$ sudo chmod 755 /etc/init.d/rngd
+# Allow anyone to run status
+if [ "$1" = "status" ] ; then
+	status $prog
+	RETVAL=$?
+	exit $RETVAL
+fi
+
+# Check that we are root ... so non-root users stop here
+test $EUID = 0  ||  exit 4
+
+# Check config
+test -f /etc/sysconfig/rngd && . /etc/sysconfig/rngd
+
+RETVAL=0
+
+start(){
+	test -x /sbin/rngd  || exit 5
+
+	echo -n $"Starting $prog: "
+
+	unset HOME MAIL USER USERNAME
+	daemon $prog "$EXTRAOPTIONS"
+	RETVAL=$?
+	echo
+	if test $RETVAL = 0 ; then
+		touch /var/lock/subsys/rngd
+	fi
+	return $RETVAL
+}
+
+stop(){
+	echo -n $"Stopping $prog: "
+	killproc $prog
+	RETVAL=$?
+	echo
+	rm -f /var/lock/subsys/rngd
+	return $RETVAL
+}
+
+reload(){
+	stop
+	start
+}
+
+restart(){
+	stop
+	start
+}
+
+condrestart(){
+	[ -e /var/lock/subsys/rngd ] && restart
+	return 0
+}
+
+
+# See how we were called.
+case "$1" in
+	start)
+	start
+	;;
+	stop)
+	stop
+	;;
+	restart)
+	restart
+	;;
+	reload|force-reload)
+	reload
+	;;
+	condrestart|try-restart)
+	condrestart
+	;;
+	*)
+	echo $"Usage: $0 {start|stop|status|restart|condrestart|try-restart|reload|force-reload}"
+	RETVAL=3
+esac
+
+exit $RETVAL
+}}}
+ 1. make the file executable
+{{{
+$ sudo chmod 755 /etc/init.d/rngd
+}}}
 			
-1. create the file /etc/sysconfig/rngd, and have it use /dev/urandom as the seed
+ 1. create the file /etc/sysconfig/rngd, and have it use /dev/urandom as the seed
+{{{
+$ echo EXTRAOPTIONS=\"-r /dev/urandom\" | sudo tee -a /etc/sysconfig/rngd
+}}}
+ 1. change permissions of the file
+{{{
+$ sudo chmod 640 /etc/sysconfig/rngd
+}}}
+ 1. (re)start rngd
+{{{
+$ sudo /sbin/service rngd restart
+}}}
 
-		$ echo EXTRAOPTIONS=\"-r /dev/urandom\" | sudo tee -a /etc/sysconfig/rngd
+== Finishing Up ==
+ 1. enable services at startup
+{{{
+$ sudo /sbin/chkconfig --levels 345 postgresql on
+$ sudo /sbin/chkconfig --levels 345 named on
+$ sudo /sbin/chkconfig --levels 345 rngd on
+$ sudo /sbin/chkconfig --levels 345 httpd on
+}}}		
+ 1. This part of the documentation extends from the CentOS 5 part, and into the "General" documentation
 
-	* change permissions of the file
+== Configure Bind ===
 
-			$ sudo chmod 640 /etc/sysconfig/rngd
+ 1. create the config file /etc/named.conf
+{{{
+options {
 
-1. (re)start rngd
+	// If there is a firewall between you and nameservers you want
+	// to talk to, you may need to fix the firewall to allow multiple
+	// ports to talk.  See http://www.kb.cert.org/vuls/id/800113
 
-		$ sudo /sbin/service rngd restart
+	// If your ISP provided one or more IP addresses for stable
+	// nameservers, you probably want to use them as forwarders.
+	// Uncomment the following block, and insert the addresses replacing
+	// the all-0's placeholder.
+	forward only;
+	forwarders {
+		8.8.8.8;
+		8.8.4.4;
+	};
 
-## Finishing Up
-1. enable services at startup
+	auth-nxdomain no;    # conform to RFC1035
+	// listen-on-v6 { any; };
+	listen-on { 127.0.0.1; };
+};
 
-		$ sudo /sbin/chkconfig --levels 345 postgresql on
-		$ sudo /sbin/chkconfig --levels 345 named on
-		$ sudo /sbin/chkconfig --levels 345 rngd on
-		$ sudo /sbin/chkconfig --levels 345 httpd on
-		
-# This part of the documentation extends from the CentOS 5 part, and into the "General" documentation
+// bypass the Google public servers
+zone "cymru.com" {
+	forward only;
+	type forward;
+	forwarders { };
+};
 
-## Configure Bind
+zone "zen.spamhaus.org" {
+	forward only;
+	type forward;
+	forwarders { };
+};
 
-1. create the config file /etc/named.conf
-
-		options {
-
-			// If there is a firewall between you and nameservers you want
-			// to talk to, you may need to fix the firewall to allow multiple
-			// ports to talk.  See http://www.kb.cert.org/vuls/id/800113
-
-			// If your ISP provided one or more IP addresses for stable
-			// nameservers, you probably want to use them as forwarders.
-			// Uncomment the following block, and insert the addresses replacing
-			// the all-0's placeholder.
-			forward only;
-			forwarders {
-				8.8.8.8;
-				8.8.4.4;
-			};
-
-			auth-nxdomain no;    # conform to RFC1035
-			// listen-on-v6 { any; };
-			listen-on { 127.0.0.1; };
-		};
-
-		// bypass the Google public servers
-		zone "cymru.com" {
-			forward only;
-			type forward;
-			forwarders { };
-		};
-
-		zone "zen.spamhaus.org" {
-			forward only;
-			type forward;
-			forwarders { };
-		};
-
-		zone "dbl.spamhaus.org" {
-			forward only;
-			type forward;
-			forwarders { };
-		};
-
+zone "dbl.spamhaus.org" {
+	forward only;
+	type forward;
+	forwarders { };
+};
+}}}
 	* In the current example, the config file has a line that consists of only "...". Although this obviously represents an omission of a section of the file, if someone were to directly copy/paste, it would be an invalid config file.
 	
 * The rest of the instructions in the Bind configuration section are valid
