--- a/wiki/ServerInstall_CentOS5_v1.wiki
+++ b/wiki/ServerInstall_CentOS5_v1.wiki
@@ -214,7 +214,7 @@ The "rngd' service [helps](https://www.centos.org/modules/newbb/viewtopic.php?to
 
 By default, there is no rngd service script. This does exist in CentOS 6, so we'll take that one and use it.
 
-1, create a new file /etc/init.d/rngd
+ 1. create a new file /etc/init.d/rngd
 {{{	
 #!/bin/bash
 #
@@ -329,8 +329,7 @@ exit $RETVAL
  1. make the file executable
 {{{
 $ sudo chmod 755 /etc/init.d/rngd
-}}}
-			
+}}}		
  1. create the file /etc/sysconfig/rngd, and have it use /dev/urandom as the seed
 {{{
 $ echo EXTRAOPTIONS=\"-r /dev/urandom\" | sudo tee -a /etc/sysconfig/rngd
