Edited wiki page ServerInstall_CentOS5_v1 through web user interface.

--- a/wiki/ServerInstall_CentOS5_v1.wiki
+++ b/wiki/ServerInstall_CentOS5_v1.wiki
@@ -399,6 +399,6 @@ zone "dbl.spamhaus.org" {
 };
 }}}
 
-== Continue with installation --
+== Continue with installation ==
 ----
 1. Continue with [ServerInstall_v1#Bind Nameserver configuration]
