Edited wiki page RouterInstall_v1 through web user interface.

--- a/wiki/RouterInstall_v1.wiki
+++ b/wiki/RouterInstall_v1.wiki
@@ -1,7 +1,7 @@
 #summary the v1 stand-alone router installation
 
 <font color='red'>
-=UNDER CONSTRUCTION=
+=Unstable=
 </font>
 
 = Introduction =
