--- a/wiki/Preso.wiki
+++ b/wiki/Preso.wiki
@@ -1,12 +1,13 @@
 #summary One-sentence summary of this page.
 
+All content licensed under [http://creativecommons.org/licenses/by-sa/3.0 CCv3] unless otherwise specifically specified.
+
 = Papers =
  * [http://www.cert.pl/PDF/MP-IST-111-18.pdf Proactive Detection and Automated Exchange of Network Security Incidents]
  * [http://www.enisa.europa.eu/activities/cert/support/proactive-detection/proactive-detection-report Proactive Detection of Network Security Incidents]
  * ProjectAvenger
 
 = Recent Presentations =
-All public presentation content licensed under [http://creativecommons.org/licenses/by-sa/3.0 CCv3]
 
  * 2013 -- [http://code.google.com/p/collective-intelligence-framework/downloads/detail?name=2013_MAAWG_wesyoung.pdf&can=2&q=#makechanges maawg]
  * 2012 -- [http://code.google.com/p/collective-intelligence-framework/downloads/detail?name=2012_SANS.pdf GFIRST/NIST] the next ten years
