Edited wiki page Preso through web user interface.

--- a/wiki/Preso.wiki
+++ b/wiki/Preso.wiki
@@ -3,9 +3,9 @@
 All content licensed under [http://creativecommons.org/licenses/by-sa/3.0 CCv3] unless otherwise specifically specified.
 
 = Papers =
- * [http://www.cert.pl/PDF/MP-IST-111-18.pdf Proactive Detection and Automated Exchange of Network Security Incidents]
- * [http://www.enisa.europa.eu/activities/cert/support/proactive-detection/proactive-detection-report Proactive Detection of Network Security Incidents]
- * ProjectAvenger
+ * 2012 - [http://www.cert.pl/PDF/MP-IST-111-18.pdf Proactive Detection and Automated Exchange of Network Security Incidents] CERT-PL 
+ * 2012- [http://www.enisa.europa.eu/activities/cert/support/proactive-detection/proactive-detection-report Proactive Detection of Network Security Incidents] ENISA
+ * 2011 - ProjectAvenger CERTCC/SEI  (independent) 
 
 = Recent Presentations =
 
