Created wiki page through web user interface.

--- a/wiki/ServerInstall_CentOS5_add_repos_v1.wiki
+++ b/wiki/ServerInstall_CentOS5_add_repos_v1.wiki
@@ -1,4 +1,4 @@
-#summary One-sentence summary of this page.
+= Dependency installation when adding 3rd party repositories =
 
 === Add repositories ===
  1. add the EPEL repo
