--- a/wiki/ServerInstall_CentOS5_v1.wiki
+++ b/wiki/ServerInstall_CentOS5_v1.wiki
@@ -35,37 +35,16 @@ SELINUX=permissive
 }}}
  1. restart the server for the kernel changes to take effect
 
-== Add repositories ==
- 1. add the EPEL repo
-{{{
-$ wget http://dl.fedoraproject.org/pub/epel/5/x86_64/epel-release-5-4.noarch.rpm
-$ sudo rpm -iv epel-release-5-4.noarch.rpm
-$ sudo rpm --import http://dl.fedoraproject.org/pub/epel/RPM-GPG-KEY-EPEL-5
-}}}		
- 1. add the postgresql repo (to install PostgreSQL 8.4)
-{{{
-$ wget http://yum.postgresql.org/8.4/redhat/rhel-5.0-x86_64/pgdg-centos-8.4-3.noarch.rpm
-$ sudo rpm -iv pgdg-centos-8.4-3.noarch.rpm
-}}}		
-		
-== Dependency installation ==
+== Dependencies ==
 ----
- 1. install base server dependencies first
-{{{
-$ sudo yum -y install rng-utils bind-utils postgresql-server httpd httpd-devel mod_ssl gcc make expat expat-devel uuid uuid-devel wget bind rsync mod_perl mod_perl-devel ntp
-}}}
- 1. make sure your clock is up to date (some packages might not install if it's too far skewed)
-{{{
-$ sudo /sbin/ntpdate -u pool.ntp.org
-}}}
- 1. install some 3rd party dependencies (specifically out of the EPEL repo)
-{{{
-$ sudo yum -y install libapreq2 libapreq2-devel perl-libapreq2 zeromq zeromq-devel
-}}}		
- 1. install the baseline perl modules
-{{{
-$ sudo yum -y install perl-Digest-SHA libxml2 libxml2-devel perl-XML-LibXML uuid-perl perl-DBD-Pg perl-XML-RSS perl-JSON perl-Unicode-String perl-Config-Simple perl-Module-Pluggable perl-MIME-Lite perl-Class-Accessor perl-YAML perl-XML-Parser perl-Net-DNS perl-DateTime-Format-DateParse perl-IO-Socket-INET6 openssl-devel perl-Module-Install perl-Net-SSLeay perl-Class-Trigger perl-IO-Socket-SSL
-}}}
+Depending on your environment, you may or may not wish to add 3rd party repositories to your installation. To address this, the first link has instructions if you want to add 3rd party repositories, the second is if you wish to manually download all dependencies from 3rd party repositories.
+
+Click on the option that best fits your needs and continue.
+
+ * [ServerInstall_CentOS5_add_repos_v1 Add 3rd party repositories to install dependencies]
+ ==== OR ====
+ * [ServerInstall_CentOS5_dl_from_repos_v1 Manually download dependencies from 3rd party repositories and install]
+
 == CPAN ==
 ----
 === Configure CPAN ===
@@ -328,4 +307,4 @@ $ sudo /sbin/chkconfig --levels 345 httpd on
 
 == Continue with installation ==
 ----
-1. Continue with [ServerInstall_v1#Bind Nameserver configuration]
+ 1. Continue with [ServerInstall_v1#Bind Nameserver configuration]
