--- a/wiki/ServerInstall_v1.wiki
+++ b/wiki/ServerInstall_v1.wiki
@@ -20,8 +20,8 @@ Issues being discussed on the mailing list can be found [https://groups.google.c
  * You *cannot* run this beta on the same box as CIF v0, it will break stuff. See the client v0 [ClientRemoval_v0 removal guide]
  * older cif clients (v0, v1_RC1) will not work with this current versions of CIF
 == v1 Client ==
- * this release assumes you're testing an instance where the cif client and the server are on the same hardware.
  * check out the v1 client [ClientInstall_v1 installer] to install the libcif client libraries (which provides the 'cif' command) on a separate host
+ * this document assumes you're testing an instance where the cif client and the server are on the same hardware.
  * If you try to run CIF v1 while watching [http://www.jibjab.com/view/coepggrUTQOmCSW6FZrBSg?mt=1 this], it might not install correctly.
 
 == Upgrading ==
