--- a/wiki/SmrtInstall_Ubuntu12_v1.wiki
+++ b/wiki/SmrtInstall_Ubuntu12_v1.wiki
@@ -1,7 +1,7 @@
-#summary ubuntu 12 smrt install doc (v1)
+#summary ubuntu 12.04 smrt install doc (v1)
 
 = Introduction =
-This assumes a clean install of Ubuntu 12 with sudo and all base system updates applied.
+This assumes a clean install of Ubuntu 12.04 with sudo and all base system updates applied.
 
 * Table of Contents *
 <wiki:toc max_depth="2" />
@@ -12,7 +12,7 @@ This assumes a clean install of Ubuntu 12 with sudo and all base system updates 
  # install the [ClientInstall_v1 client]
  # Install the following dependencies
 {{{
-$ sudo aptitude -y install rng-tools libexpat1-dev libxml-libxml-perl libxml2-dev bind9 libregexp-common-perl libxml-rss-perl libunicode-string-perl libmime-lite-perl libfile-type-perl libtext-csv-perl libio-socket-inet6-perl libdate-manip-perl libclass-accessor-perl pkg-config vim libjson-xs-perl libtime-hires-perl libencode-perl libzmq-dev libzmq1 libzeromq-perl
+$ sudo aptitude -y install rng-tools libexpat1-dev libxml-libxml-perl libxml2-dev bind9 libregexp-common-perl libxml-rss-perl libunicode-string-perl libmime-lite-perl libfile-type-perl libtext-csv-perl libio-socket-inet6-perl libdate-manip-perl libclass-accessor-perl pkg-config vim libjson-xs-perl libtime-hires-perl libencode-perl libzmq-dev libzmq1 libzeromq-perl postgresql-client uuid-dev
 }}}
 == System Setup ==
 ----
