--- a/wiki/SmrtInstall_Ubuntu12_v1.wiki
+++ b/wiki/SmrtInstall_Ubuntu12_v1.wiki
@@ -14,11 +14,15 @@ This assumes a clean install of Ubuntu 12.04 with sudo and all base system updat
 {{{
 $ sudo aptitude -y install rng-tools libexpat1-dev libxml-libxml-perl libxml2-dev bind9 libregexp-common-perl libxml-rss-perl libunicode-string-perl libmime-lite-perl libfile-type-perl libtext-csv-perl libio-socket-inet6-perl libdate-manip-perl libclass-accessor-perl pkg-config vim libjson-xs-perl libtime-hires-perl libencode-perl libzmq-dev libzmq1 libzeromq-perl postgresql-client uuid-dev
 }}}
+ # Install additional CPAN/perl dependencies
+{{{
+$ sudo PERL_MM_USE_DEFAULT=1 perl -MCPAN -e 'install Sys::MemInfo,Net::Abuse::Utils,Linux::Cpuinfo,Net::Abuse::Utils::Spamhaus,ZeroMQ'
+}}}
+
 == System Setup ==
 ----
 === Resolver Config ===
  # Configure the static interface to use 127.0.0.1 as the nameserver
-
  # edit /etc/network/interfaces
 {{{
 $ sudo vi /etc/network/interfaces
@@ -42,4 +46,18 @@ nameserver 127.0.0.1
 
 === Bind9 Setup ===
  # configure [BindSetup_v1 bind]
+
+=== Random Number Generator ===
+The "rng-tools' service helps with random number generation (mainly used for generating security certificates in bind and apache, speeds up the entropy process).
+ # modify /etc/default/rng-tools to use /dev/urandom as the seed
+{{{
+$ echo 'HRNGDEVICE=/dev/urandom' | sudo tee -a /etc/default/rng-tools
+}}}
+ # restart rng-tools
+{{{
+$ sudo service rng-tools restart
+}}}
+
+== Continue ==
+----
  # Continue with the cif-smrt [SmrtInstall_v1#Install_Package installation]
