Edited wiki page RoadMap through web user interface.

--- a/wiki/RoadMap.wiki
+++ b/wiki/RoadMap.wiki
@@ -2,7 +2,7 @@
 
 = Overview =
 
-These are our best projections as of the last 'wiki edit' date, subject to change as the project evolves. The issues list can be found [http://code.google.com/p/collective-intelligence-framework/issues/list here] for a more refined map of what the blockers are to each release.
+These are our best projections as of the last 'wiki edit' date, subject to change as the project evolves. The issues list can be found [https://github.com/collectiveintel/cif-v2/issues/milestones here] for a list of the current milestones.
 
 = Spring 2013 - v1  =
  
